# EmailSummarizer

./: .gitignore  README.md  main.py  markdown_test.ipynb  pyproject.toml  run_api.py
config/: config.yml
email_summarizer/: .env.example
email_summarizer/api/: __init__.py  dependencies.py  main.py
email_summarizer/api/models/: __init__.py  email.py  summary.py
email_summarizer/api/routers/: __init__.py  email.py  summary.py
email_summarizer/app/: __init__.py  celery_app.py  config.py
email_summarizer/app/agents/: __init__.py  agent_utils.py  multiagent.py
email_summarizer/app/agents/analysts/: action_items_analyst.py  briefing_analyst.py  status_update_analyst.py
email_summarizer/app/agents/config/: default_config.py
email_summarizer/app/agents/graph/: agent_states.py  conditional_logic.py  email_summarizer_graph.py  propagation.py  setup.py
email_summarizer/app/agents/manager/: email_summary_manager.py
email_summarizer/app/tasks/: __init__.py  fetch_emails.py  report.py  summarize.py
email_summarizer/app/utils/: __init__.py  config_manager.py  exchange_client.py  logging_init.py
email_summarizer/app/web/: email_summarizer_web.py
email_summarizer/scripts/: run_beat.sh  run_worker.sh  test_email_summarizer_graph.py  test_fetch_emails.py  test_logger_init.py
